fixed spacing of the table in the membership

--- a/membershipStyle.css
+++ b/membershipStyle.css
@@ -58,7 +58,7 @@ p{
 
 .table {
 
-	padding: 150px 100px 150px 100px;
+	padding: 50px 100px 75px 100px;
 }
 
 .table table{
